crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_for_block-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 64,
        },
        node_type: SpecialBlock(
            For(
                ForBlock {
                    binding: "elem",
                    index: Some(
                        "i",
                    ),
                    expr: SCRIPT@0..9
                      EXPR_STMT@0..9
                        ARRAY_EXPR@0..9
                          L_BRACK@0..1 "["
                          LITERAL@1..2
                            NUMBER@1..2 "1"
                          COMMA@2..3 ","
                          WHITESPACE@3..4 " "
                          LITERAL@4..5
                            NUMBER@4..5 "2"
                          COMMA@5..6 ","
                          WHITESPACE@6..7 " "
                          LITERAL@7..8
                            NUMBER@7..8 "3"
                          R_BRACK@8..9 "]"
                    ,
                    inner: [
                        Node {
                            loc: Location {
                                start: 27,
                                end: 57,
                            },
                            node_type: Element(
                                Element {
                                    tag: "p",
                                    attrs: [],
                                    children: [
                                        Node {
                                            loc: Location {
                                                start: 30,
                                                end: 36,
                                            },
                                            node_type: Text(
                                                "Index: ",
                                            ),
                                        },
                                        Node {
                                            loc: Location {
                                                start: 37,
                                                end: 39,
                                            },
                                            node_type: Mustache(
                                                SCRIPT@0..1
                                                  EXPR_STMT@0..1
                                                    NAME_REF@0..1
                                                      IDENT@0..1 "i"
                                                ,
                                            ),
                                        },
                                        Node {
                                            loc: Location {
                                                start: 40,
                                                end: 47,
                                            },
                                            node_type: Text(
                                                ". Elem: ",
                                            ),
                                        },
                                        Node {
                                            loc: Location {
                                                start: 48,
                                                end: 53,
                                            },
                                            node_type: Mustache(
                                                SCRIPT@0..4
                                                  EXPR_STMT@0..4
                                                    NAME_REF@0..4
                                                      IDENT@0..4 "elem"
                                                ,
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            ),
        ),
    },
]
