crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_if_block.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            metadata: Location {
                start: 0,
                end: 29,
            },
            node_type: SpecialBlock(
                If(
                    IfBlock {
                        expr: SCRIPT@0..6
                          EXPR_STMT@0..6
                            BIN_EXPR@0..6
                              NAME_REF@0..1
                                IDENT@0..1 "x"
                              WHITESPACE@1..2 " "
                              EQ2@2..4 "=="
                              WHITESPACE@4..5 " "
                              LITERAL@5..6
                                NUMBER@5..6 "3"
                        ,
                        inner: [
                            Node {
                                metadata: Location {
                                    start: 12,
                                    end: 23,
                                },
                                node_type: Element(
                                    Element {
                                        tag: "p",
                                        attrs: [],
                                        children: [
                                            Node {
                                                metadata: Location {
                                                    start: 15,
                                                    end: 19,
                                                },
                                                node_type: Text(
                                                    "hello",
                                                ),
                                            },
                                        ],
                                    },
                                ),
                            },
                        ],
                        else_block: None,
                    },
                ),
            ),
        },
    ],
    script: None,
    css: None,
}
