crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_mustache_in_event_handle_attr.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 23,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [
                        EventHandler(
                            EventHandler {
                                event: "click",
                                expr: SCRIPT@0..5
                                  EXPR_STMT@0..5
                                    NAME_REF@0..5
                                      IDENT@0..5 "hello"
                                ,
                            },
                        ),
                    ],
                    children: [],
                },
            ),
        },
    ],
    script: None,
    css: None,
}
