crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_mustache_tags-3.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 6,
        },
        node_type: Text(
            "hello, ",
        ),
    },
    Node {
        loc: Location {
            start: 7,
            end: 13,
        },
        node_type: Mustache(
            SCRIPT@0..5
              EXPR_STMT@0..5
                NAME_REF@0..5
                  IDENT@0..5 "hello"
            ,
        ),
    },
]
