crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_mustache_tags.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 3,
                end: 9,
            },
            node_type: Mustache(
                SCRIPT@0..5
                  EXPR_STMT@0..5
                    NAME_REF@0..5
                      IDENT@0..5 "hello"
                ,
            ),
        },
    ],
    script: None,
    css: None,
}
