crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_script-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 23,
                end: 34,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [
                        Node {
                            loc: Location {
                                start: 26,
                                end: 30,
                            },
                            node_type: Text(
                                "hello",
                            ),
                        },
                    ],
                },
            ),
        },
    ],
    script: Some(
        SCRIPT@0..15
          EXPR_STMT@0..6
            ASSIGN_EXPR@0..5
              NAME_REF@0..1
                IDENT@0..1 "x"
              WHITESPACE@1..2 " "
              EQ@2..3 "="
              WHITESPACE@3..4 " "
              LITERAL@4..5
                NUMBER@4..5 "3"
            SEMICOLON@5..6 ";"
          EXPR_STMT@6..15
            BIN_EXPR@6..15
              ERROR@6..14
                L_ANGLE@6..7 "<"
                ERROR@7..8
                  SLASH@7..8 "/"
                NAME_REF@8..14
                  IDENT@8..14 "script"
              R_ANGLE@14..15 ">"
              ERROR@15..15
        ,
    ),
}
