crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_script.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [],
    script: Some(
        MODULE@0..6
          EXPR_STMT@0..6
            ASSIGN_EXPR@0..5
              NAME_REF@0..1
                IDENT@0..1 "x"
              WHITESPACE@1..2 " "
              EQ@2..3 "="
              WHITESPACE@3..4 " "
              LITERAL@4..5
                NUMBER@4..5 "3"
            SEMICOLON@5..6 ";"
        ,
    ),
    css: None,
}
