crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_self_closing_tag-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 4,
        },
        node_type: Element(
            Element {
                tag: "br",
                attrs: [],
                children: [],
            },
        ),
    },
]
